video: Work around enum declaration in libva that is bogous on 32 bit archs

Closes: https://gitlab.freedesktop.org/virgl/virglrenderer/-/issues/464

Signed-off-by: Gert Wollny <gert.wollny@collabora.com>